--- a/.tmuxinator/study.yml
+++ b/.tmuxinator/study.yml
@@ -25,4 +25,4 @@ windows:
   - MonsterTown:
       layout: even-horizontal
       panes:
-        - cd ~/swift/MonsterTown
+        - cd ~/swift/BigNerdRanch
