git: use -- as a separator

--- a/.gitconfig
+++ b/.gitconfig
@@ -65,7 +65,7 @@
     # push branch to origin and track it
     po  = "!f(){ branch=$(git rev-parse --abbrev-ref HEAD); git push --set-upstream origin $branch; }; f"
     # create a new PR from origin/master
-    pr  = !sh -c 'git checkout -b jduan/$1 $(git rev-parse origin/master)' -
+    pr  = !sh -c 'git checkout -b jduan--$1 $(git rev-parse origin/master)' -
     pu  = push --set-upstream
     r   = rebase
     ri  = rebase -i
