tmux plugin manager

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -83,62 +83,15 @@ set -g display-panes-time 8000 # milliseconds
 # Renumber windows automatically when a window is deleted
 set-option -g renumber-windows on
 
-# notes
-#### window ####
-# Ctrl-x c  Create new window
-# Ctrl-x ,  Rename the current window
-# Ctrl-x ,  Rename the current window
-# Ctrl-x 0-9  Move to the 0 to 9 window
-# Ctrl-x l  Move to previously selected window
-# Ctrl-x n  Move to next window
-# Ctrl-x p  Move to previous window
-# Ctrl-x w  List all windows with numbers
-# Ctrl-x &  Kill the current window
-# Ctrl-x ,  Rename the current window
-# Ctrl-x f  type in window name (partial name is fine) and tmux will find it
+# tmux plugin manager: https://github.com/tmux-plugins/tpm
+# This should stat at the bottom of this file!!!
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+# Other examples:
+# set -g @plugin 'github_username/plugin_name'
+# set -g @plugin 'git@github.com/user/plugin'
+# set -g @plugin 'git@bitbucket.com/user/plugin'
 
-#### session ####
-# Ctrl-x d  Detach current client
-# Ctrl-x : "rename-session <new_name>'  Rename the current session
-# $ tmux list-sessions
-# $ tmux attach-session -t <session_name>
-# $ tmux new-session -s <session_name>
-
-#### pane ####
-# Ctrl-x Ctrl-o  Swap location of panes
-# Ctrl-x %  Split vertically
-# Ctrl-x : 'split-window -h' split horizontally
-# Ctrl-x q  Show pane numbers (type the pane number to go to that pane)
-# Ctrl-x o  Switch to next pane
-# Ctrl-x x  Kill the current pane (or Ctrl-d from cmd line if no jobs)
-# Ctrl-x !  Kill the other pane except the current one
-# Ctrl-x {  Move the current pane left
-# Ctrl-x }  Move the current pane right
-# Ctrl-x <space>  Toggle through different pane layouts
-# Ctrl-x : "break-pane" Make a pane into its own window
-
-#### resize pane ####
-# Ctrl-x : resize-pane (By default it resizes the current pane down)
-# Ctrl-x : resize-pane -U (Resizes the current pane upward)
-# Ctrl-x : resize-pane -L (Resizes the current pane left)
-# Ctrl-x : resize-pane -R (Resizes the current pane right)
-# Ctrl-x : resize-pane 20 (Resizes the current pane down by 20 cells)
-# Ctrl-x : resize-pane -U 20 (Resizes the current pane upward by 20 cells)
-# Ctrl-x : resize-pane -L 20 (Resizes the current pane left by 20 cells)
-# Ctrl-x : resize-pane -R 20 (Resizes the current pane right by 20 cells)
-# Ctrl-x : resize-pane -t 2 20 (Resizes the pane with the id of 2 down by 20 cells)
-# Ctrl-x : resize-pane -t -L 20 (Resizes the pane with the id of 2 left by 20 cells)
-
-#### redraw tmux window when switching from smaller monitor to bigger one ####
-# $ tmux attach -d # this will detach all the other clients
-
-#### other ####
-# Ctrl-x ?  List all bindings
-# Ctrl-x :  Type any command to execute it
-# Ctrl-x t  Show time
-
-#### how to reorder windows?
-# Ctrl-x . This is aka 'move-window'. You can give it a new number.
-
-#### how to reload tmux config?
-# Prefix :source-file ~/.tmux.conf
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
