--- a/.ideavimrc
+++ b/.ideavimrc
@@ -2,6 +2,12 @@
 " map b <Nop>
 " map <Space> <Nop>
 
+let mapleader = ","
+
+" Integrate with system clipboard
+set clipboard=unnamedplus,unnamed
+" set clipboard+=unnamed
+
 " no ignore case when pattern has uppercase
 set smartcase
 set ignorecase
@@ -14,9 +20,20 @@ set incsearch
 " hit space to turn off highlighted words
 nnoremap <Space> :nohlsearch<cr>
 " Press ii to exit insert mode
-:imap ii <Esc>
+:inoremap ii <Esc>
+:inoremap <leader>a ->
 
 " Emulated Vim Plugins
 set vim-surround
 
-set clipboard+=unnamed
+
+" Try them!
+" nmap <leader>g :action GotoDeclaration<cr>
+" nmap <leader>b :action Back<cr>
+" nmap <leader>f :action Forward<cr>
+"
+" nmap <leader>t :action GotoFile<cr>
+" nmap <leader>c :action GotoClass<cr>
+" nmap <leader>ns :action GotoSymbol<cr>
+" nmap <leader>nm :action FileStructurePopup<cr>
+" nmap <leader>d :action ShowErrorDescription<cr>
