--- a/.tmux.conf
+++ b/.tmux.conf
@@ -76,6 +76,9 @@ setw -g automatic-rename off
 
 # window movement / renumbering like in screen's :number
 bind-key m command-prompt -p "move window to:"  "swap-window -t '%%'"
+# move window to the left and right
+bind-key l swap-window -t -1
+bind-key r swap-window -t +1
 
 # how long it display panes when you do "prefix q"
 set -g display-panes-time 8000 # milliseconds
